--- a/src/classroom/assets/book.module.css
+++ b/src/classroom/assets/book.module.css
@@ -1,10 +1,19 @@
-/* .book {
-  padding: 50px;
-  transition: transform .2s;
-  width: 200px;
-  height: 200px;
-  margin: 0 auto;
-} */
+.bookshelf {
+  text-align: center;
+}
+
+.table {
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.book {
+  background-color: #d2a56d;
+  border-style: solid;
+  border-width: 10px;
+  border-color: brown;
+  width: 13%;
+}
 
 .book:hover {
   transform: scale(1.1);
