--- a/src/classroom/assets/book.module.css
+++ b/src/classroom/assets/book.module.css
@@ -42,6 +42,7 @@
   text-align: center;
   padding: 5px 0;
   border-radius: 6px;
+  font-family: Chalkduster;
  
   position: absolute;
   z-index: 1;
