Change notes background color

--- a/src/classroom/assets/notes.module.css
+++ b/src/classroom/assets/notes.module.css
@@ -11,8 +11,8 @@
     font-family: 'Bebas Neue';
     font-size: 2rem;
     padding: 5px;
+    background-color: white;
 }
-
 
 .notesContainer {
   grid-column: 3/4;
